syntax = "proto3";

package trainTicketing;

option go_package = "./pb";

message DeleteUserRequest {
    int64 id = 1;
}

message User {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
}

message Ticket {
    string from = 1;
    string to = 2;
    User user = 3;
    float price_paid = 4;
}

message Seat {
    enum Section {
        SECTION_A = 0;
        SECTION_B = 1;
    }
    string user_id = 1;
    Section section = 2;
}

message GetUsersOptions {
    enum Section {
        SECTION_A = 0;
        SECTION_B = 1;
    }
    Section section = 1;
}

message Empty {}

service TrainTicketService {
    rpc PurchaseTicket (Ticket) returns (Ticket);
    rpc UserDetails (Empty) returns (User);
    rpc Users (GetUsersOptions) returns (stream Seat);
    rpc RemoveUser (DeleteUserRequest) returns (Empty);
    rpc ModifyUserSeat (Seat) returns (Empty);
}
